{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player",
            "id": "eebfaba3-7e1e-46ae-aecb-b54ce959c0e9",
            "actions": [
                {
                    "name": "CameraMoveControl",
                    "type": "Value",
                    "id": "a46896fc-b074-4193-81b6-2cf6b0aff040",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScreenClick",
                    "type": "Button",
                    "id": "7941f300-3c4f-4d7c-9a56-6b57b50a5bf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GridClick",
                    "type": "Button",
                    "id": "73d82180-fe84-48cc-80d2-b2df750b6c96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenClickPos",
                    "type": "Value",
                    "id": "dcef9788-625b-4762-8ec5-e9e8eab3463d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Spawn",
                    "type": "Button",
                    "id": "f01c8c11-fcc1-4eb5-ad24-34c1f9844fee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "DeSpawn",
                    "type": "Button",
                    "id": "10672b82-d7db-4aee-ab20-7dbd9b9d2f75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15cb4f50-79a4-4588-a405-54f4e3f6fbf0",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "CameraMoveControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "915acaf1-4aab-4216-b4f7-20c5cdaa8ebb",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecd68098-1fd6-4b0a-bb5f-b4d8db0a505d",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GridClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e5cf768-154f-4120-8522-844685efadae",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenClickPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "876ea660-c628-49e4-9963-afc33e2674ee",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d2981d8-1c70-4f2b-94ec-ad6bad983087",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e837f0e0-6ce3-4161-aedf-124b6978fedc",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeSpawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}